[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/Characters/Enemies/Bosses/necromancer-add/skeleton_seeker.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemies/Boss/Necromancer/SkeletonGranInvoque.gd" type="Script" id=2]
[ext_resource path="res://sfx/shade2.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/shade14.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 40 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 6, 12, 18, 24, 30, 36, 42, 48, 54 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_cm_enabled_Attack"
}, {
"args": [  ],
"method": "_cm_disabled_Attack"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "dead"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 8, 14, 20, 26 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_cd_finish_dead"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 11, 17, 23 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0833333, 0.25, 0.416667, 0.583333, 0.75, 0.916667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 10, 16, 22, 28, 34 ]
}

[sub_resource type="Animation" id=12]
resource_name = "init"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "rise"
step = 0.00606061
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0909091, 0.193182, 0.295455, 0.397727, 0.5, 0.602273, 0.704545, 0.806818, 0.886364, 0.977273 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 9, 15, 21, 27, 33, 39, 45, 51, 57, 63 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk"
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.416667, 0.583333, 0.75, 0.916667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 7, 13, 19, 25, 31 ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "init"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "rise"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=9]
states/attack/node = SubResource( 14 )
states/attack/position = Vector2( 419, 96 )
states/dead/node = SubResource( 15 )
states/dead/position = Vector2( 611, 141 )
states/hurt/node = SubResource( 16 )
states/hurt/position = Vector2( 419, 182 )
states/idle/node = SubResource( 17 )
states/idle/position = Vector2( 252, 182 )
states/init/node = SubResource( 18 )
states/init/position = Vector2( 98, 96 )
states/rise/node = SubResource( 19 )
states/rise/position = Vector2( 103, 182 )
states/walk/node = SubResource( 20 )
states/walk/position = Vector2( 252, 96 )
transitions = [ "init", "rise", SubResource( 21 ), "rise", "idle", SubResource( 22 ), "idle", "walk", SubResource( 23 ), "walk", "idle", SubResource( 24 ), "walk", "attack", SubResource( 25 ), "attack", "idle", SubResource( 26 ), "idle", "hurt", SubResource( 27 ), "hurt", "idle", SubResource( 28 ), "walk", "hurt", SubResource( 29 ), "hurt", "walk", SubResource( 30 ), "hurt", "attack", SubResource( 31 ), "hurt", "dead", SubResource( 32 ) ]
start_node = "init"
end_node = "dead"

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 36, 40 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 15, 25.5 )

[node name="SkeletonGranInvoque" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 1040
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, -8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
hframes = 6
vframes = 11
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/dead = SubResource( 4 )
anims/hurt = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/init = SubResource( 12 )
anims/rise = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 10 )

[node name="AttackArea" type="Area2D" parent="." groups=["Enemies"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -28, -8 )
shape = SubResource( 11 )
disabled = true

[node name="DeadArea" type="Area2D" parent="." groups=["EnemiesDefense"]]
rotation = 3.14159
scale = Vector2( 1, -1 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( 3, -1.5 )
shape = SubResource( 13 )

[node name="Rays" type="Node2D" parent="."]

[node name="Attack" type="RayCast2D" parent="Rays"]
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( -72, 0 )

[node name="Rise" type="RayCast2D" parent="Rays"]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( -160, 0 )

[node name="Flip" type="RayCast2D" parent="Rays"]
position = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( -48, 0 )
collision_mask = 1040

[node name="EndFlip" type="RayCast2D" parent="Rays"]
position = Vector2( -40, 8 )
enabled = true
collision_mask = 528

[node name="BackFlip" type="RayCast2D" parent="Rays"]
position = Vector2( 48, 0 )
enabled = true
cast_to = Vector2( 216, 0 )

[node name="RiseBack" type="RayCast2D" parent="Rays"]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 160, 0 )

[node name="SwordHurt01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 0.3

[node name="SwordHurt02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 0.5

[connection signal="area_entered" from="DeadArea" to="." method="_on_DeadArea_area_entered"]
